--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,9 @@ plugins {
 	id 'application'
 	id 'org.springframework.boot' version '3.3.3'
 	id 'io.spring.dependency-management' version '1.1.6'
+
+
+
 }
 
 group = 'com.moyeobwayo'
@@ -36,6 +39,11 @@ dependencies {
 	implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'
 //	implementation 'org.slf4j:slf4j-api:1.7.36'
 //	implementation 'org.slf4j:slf4j-simple:1.7.36'
+
+	// jwt 의존성 추가
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 }
 
 tasks.named('test') {
