fix: 12 to 12 시 우선순위 측정안됨

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
     hibernate:
       ddl-auto: update  # 테이블 자동 생성 및 업데이트
       # ddl-auto: create # 기존 테이블 삭제 후 새로 생성
-    show-sql: true  # SQL 쿼리 로그 콘솔 출력
+    show-sql: false  # SQL 쿼리 로그 콘솔 출력
   datasource:
     hikari:
       maximum-pool-size: 4
